# firstdorsal-web

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  astro.config.mjs  build.sh  deploy.sh  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  sws.toml  vitest.config.ts
.github/workflows/: build.yml  deploy.yml
deployment/: .gitignore  mows-manifest.yaml  provided-secrets.env.example  values.yaml
deployment/templates/: docker-compose.yaml
docs/: chat-feature-plan.md
e2e/: auth.setup.ts  call.spec.ts  chat.spec.ts  helpers.ts  mock-whisper.mjs  perf.spec.ts  start-server.sh  start-whisper.sh
lilo/: .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
lilo/src/components/: Countdown.tsx  Hero.astro  LiloLogo.astro  Marquee.astro  Nav.astro  SignupForm.tsx  ThermalCanvas.tsx
lilo/src/layouts/: Layout.astro
lilo/src/pages/: index.astro
lilo/src/styles/: global.css
public/: manifest.webmanifest  robots.txt  sw.js
server/: Cargo.toml  README.md
server/migrations/: 0001_init.sql  0002_attachments.sql
server/src/: api.rs  auth.rs  config.rs  db.rs  lib.rs  mail.rs  main.rs  statics.rs  turn.rs  whisper.rs  ws.rs
src/: env.d.ts
src/components/: CopyMail.test.tsx  CopyMail.tsx  Hero.test.tsx  Hero.tsx  Kontakt.test.tsx  Kontakt.tsx  Leistungen.test.tsx  Leistungen.tsx  MailLink.tsx  MailText.astro  ModeToggle.tsx  Referenzen.test.tsx  Referenzen.tsx  SectionHeading.tsx  SiteFooter.astro  SiteHeader.astro  SpineIllustration.test.tsx  SpineIllustration.tsx  SpineMark.tsx  Vorgehen.test.tsx  Vorgehen.tsx
src/components/chat/: AdminChat.tsx  CallPanel.tsx  ChatWidget.test.tsx  ChatWidget.tsx  Composer.tsx  MessageBubble.tsx  MessageList.tsx
src/components/ui/: button.tsx  card.tsx
src/layouts/: Layout.astro
src/lib/: call.ts  chat.ts  i18n.ts  mail.ts  offline.ts
src/pages/: datenschutz.astro  impressum.astro  index.astro
src/pages/chat/: admin.astro
src/pages/en/: index.astro
src/styles/: global.css
src/test/: setup.ts
